--- a/index.html
+++ b/index.html
@@ -158,9 +158,10 @@
     
     <!-- BEGIN: Scripts -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <!--<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>-->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     
+    <script src="scripts/jquery.easings.min.js"></script>
     <script src="scripts/jquery.slimscroll.min.js"></script>
     <script src="scripts/jquery.fullPage.js"></script>
     <script>
