top nav updated
added active to 1st link

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#pane1">Pane 1</a></li>
+                    <li class="active"><a href="#pane1">Pane 1</a></li>
                     <li><a href="#pane2">Pane 2</a></li>
                     <li><a href="#pane3">Pane 3</a></li>
-                    <li class="active"><a href="https://ucfknightsnetwork.com/businesshalloffame" target="_blank"><strong>Register</strong></a></li>
+                    <!--<li class="active"><a href="https://ucfknightsnetwork.com/businesshalloffame" target="_blank"><strong>Register</strong></a></li>-->
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
