--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#pane1">Pane 1</a></li>
+                    <li><a href="#pane1">Pane 1</a></li>
                     <li><a href="#pane2">Pane 2</a></li>
                     <li><a href="#pane3">Pane 3</a></li>
                     <!--<li class="active"><a href="https://ucfknightsnetwork.com/businesshalloffame" target="_blank"><strong>Register</strong></a></li>-->
@@ -58,7 +58,11 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-xs-12 text-center">
-                                        STARTER RIOT
+                                        <hgroup>
+                                            <h1>THIS IS THE TITLE</h1>
+                                            <h2>This is the Subtitle</h2>
+                                        </hgroup>
+                                        <p>This is a paragraph.</p>
                                     </div>
                                 </div>
                             </div>
